--- a/core/sass/pages/find-a-supplier/_landing-page.scss
+++ b/core/sass/pages/find-a-supplier/_landing-page.scss
@@ -83,7 +83,6 @@ $transparent-white: rgba(250, 250, 250, 0.8);
 
     a {
       text-align: center;
-      width: 350px;
       height: 60px;
       padding: 0;
       line-height: 60px;
